@@ -57,6 +57,10 @@ static void init_linux_paths(void)
 	    g_strconcat(inst_paths.base_dir, "glade/", NULL);
 	inst_paths.home_dir =
 		g_strdup(g_get_home_dir());
+
+#ifdef ENABLE_NLS
+	inst_paths.locale_dir = g_strconcat(LOCALEDIR, "/", NULL);
+#endif				/*  */
 }
 #endif				/*  */
 
@@ -109,6 +113,11 @@ static void init_win32_paths(void)
 	    g_strconcat(inst_paths.base_dir, "glade\\", NULL);
 	inst_paths.home_dir = 
 	    g_strconcat(inst_paths.base_dir, "My TI files\\", NULL);
+
+#ifdef ENABLE_NLS
+	inst_paths.locale_dir =
+	    g_strconcat(inst_paths.base_dir, "locale\\", NULL);
+#endif				/*  */
 }
 #endif				/*  */
 
